# cs_224n_nlp_deep_learning

./: README.md
assignments/1_intro_to_word_vectors/: exploring_word_vectors_22_23.py  pyproject.toml
assignments/1_intro_to_word_vectors/.devcontainer/: devcontainer.json
